Detalles en mensajes al momento de cambiar lenguaje

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,3 +14,7 @@ navbar.texto.cambiar.lenguaje=Change Language
 producto.texto.noexiste=There are no products in the database!
 producto.texto=Product
 footer.texto.autor=Developed by Jose Alvarez
+producto.texto.titulo=Productos Online
+producto.mensaje.crear=New product %s has been created successfully!
+producto.mensaje.editar=Product %s has been updated successfully!
+producto.mensaje.eliminar=Product %s has been removed successfully!
