--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,7 @@ navbar.texto.cambiar.lenguaje=Cambiar Lenguaje
 producto.texto.noexiste=No existen productos en la base de datos!
 producto.texto=Producto
 footer.texto.autor=Desarrollado por Jose Alvarez
+producto.texto.titulo=Online Products
+producto.mensaje.crear=Nuevo producto %s creado con exito!
+producto.mensaje.editar=Producto %s editado con exito!
+producto.mensaje.eliminar=Producto %s eliminado con exito!
